# RL_project

./: .gitignore  README.md  pyproject.toml
models/: ppo_final.pt
models/cuda_training_20241222_195554/: ppo_final.pt
scripts/: evaluate_model.py  run_training.py  train_ppo.py
src/agents/: ppo_agent.py
src/environment/: __init__.py  game_env.py  mini_strat_game.py
