[tool.poetry]
name = "nlp-course"
version = "0.1.0"
description = ""
authors = ["Rustem Khutiev <76971769+PhenomenaPh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66.5"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
numpy = "^1.21.0"
gymnasium = "^0.28.1"
wandb = "^0.12.0"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
